<?xml version="1.0"?>
<package format="2">
  <name>office_bot_navigation</name>
  <version>0.0.0</version>
  <description>The office_bot_navigation package</description>

  <maintainer email="tfanselo@todo.todo">tfanselo</maintainer>

  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>teb_local_planner</exec_depend> 


  <export>
  </export>
</package>
